infra/kind/bases/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /todo(/|$)(.*)
        backend:
          serviceName: todo
          servicePort: 8080
      - path: /ui(/|$)(.*)
        backend:
          serviceName: ui
          servicePort: 8080
